<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LimasActivity"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin">

    <!-- Input Luas Alas -->
    <EditText
        android:id="@+id/inputLuasAlas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:hint="@string/masukkan_luas_alas"
        android:inputType="numberDecimal" />

    <!-- Input Tinggi -->
    <EditText
        android:id="@+id/inputTinggiLimas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/masukkan_tinggi_limas"
        android:inputType="numberDecimal"
        android:layout_below="@id/inputLuasAlas"
        android:layout_marginTop="16dp" />

    <!-- Tombol Hitung -->
    <Button
        android:id="@+id/btnHitungLimas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hitung_volume"
        android:layout_below="@id/inputTinggiLimas"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true" />

    <!-- Hasil -->
    <TextView
        android:id="@+id/txtHasilLimas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hasil"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_below="@id/btnHitungLimas"
        android:layout_marginTop="16dp"
        android:gravity="center" />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:text="←"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginTop="700dp"
        android:fontFamily="sans-serif-medium" />

</RelativeLayout>
