<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LingkaranActivity"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin">

    <!-- Input Jari-jari -->
    <EditText
        android:id="@+id/inputJari"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:hint="@string/masukkan_jari_jari"
        android:inputType="numberDecimal" />

    <!-- Tombol Hitung -->
    <Button
        android:id="@+id/btnHitungLingkaran"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hitung_luas"
        android:layout_below="@id/inputJari"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true" />

    <!-- Hasil -->
    <TextView
        android:id="@+id/txtHasilLingkaran"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hasil"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_below="@id/btnHitungLingkaran"
        android:layout_marginTop="16dp"
        android:gravity="center" />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:text="←"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginTop="700dp"
        android:fontFamily="sans-serif-medium" />

</RelativeLayout>
